<resources>
    <string name="app_name">Jjuzzawo</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="logo">Jjuzzawo logo</string>
    <string name="update_prices">Update Prices</string>
    <string name="register_fuel_station">Register</string>
    <string name="forgot_password">\? forgot your password</string>
    <string name="register_here">Not yet a member</string>
    <string name="validationerrormessage">error</string>
    <string name="firstnameerror">firstname</string>
    <string name="submit">Submit</string>
    <string name="phone_number">phone number</string>
    <string name="email_address">email address</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="map">map</string>
    <string name="action_search">search</string>
    <string name="map_tittle">Map mode</string>
    <string name="search">Search</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="fuel_priceb">Fuel price</string>
    <string name="fuel_price">fuelPrice</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_satelite">Satellite</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_normal">Normal</string>
    <string name="map_none">None</string>
    <string name="error_server">Sorry Error Connecting to Server</string>
    <string name="Prices">Prices</string>
    <string name="services">Services</string>
    <string name="service_name">Service name</string>
    <string name="image_icon">image</string>
    <string name="branchName">Brach Name</string>
    <string name="description">Description</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabs_details">StationDetails</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">refresh</string>
</resources>
