<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="horizontal"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_type"
        android:id="@+id/fuel_type"
        android:textColor="@color/primaryDark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fuel_price"
        android:text="@string/fuel_price"
        android:layout_alignTop="@+id/fuel_type"
        android:textColor="@color/primaryDark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/description"
        android:id="@+id/description"
        android:layout_below="@+id/fuel_type"
        android:layout_alignStart="@+id/fuel_type" />

</RelativeLayout>