<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/jjuzzawo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logo"
            android:id="@+id/textView" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginTop="53dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true" />


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"

            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_below="@+id/editText"
                android:layout_alignParentStart="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/errortxt"
            android:layout_gravity="center_horizontal" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login"
            android:textColor="@color/txtColor"
            android:background="@color/butColor"
            style="?android:attr/borderlessButtonStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/txtColor"
            android:background="@color/butColor"
            android:text="@string/register"
            android:id="@+id/registration"
            android:layout_marginTop="10dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</ScrollView>